--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 margin-bottom: 20px;
                 display: flex;
                 padding: 10px;
+                border-radius: 20px;
             }
             h1 {
                 display: flex;
@@ -45,6 +46,8 @@
             main {
                 background: rgb(40, 229, 246);
                 display: flex;
+                border-radius: 20px;
+                padding: 20px;
             }
             .sidebar {
                 margin-right: 25px;
@@ -52,6 +55,8 @@
             }
             .sidebar-img {
                 width: 200px;
+                border: 3px magenta solid;
+                border-radius: 10px;
             }
             .content {
                 flex: 1;
@@ -59,10 +64,14 @@
             }
             #interests {
                 border: 4px magenta double;
-                padding: 8px;
+                padding: 10px;
+                border-radius: 40px;
             }
             h2, h3 {
                 margin: 0px;
+            }
+            p {
+                text-size-adjust: 20px;
             }
          </style>
     </head>
@@ -71,7 +80,7 @@
     <!-- Content Section-->
     <div id="all-contents">
         <nav>
-            <h1>Aaliyah's Aunthentic Website</h1>
+            <h1>Aaliyah's Authentic Website</h1>
             <ul id="nav-ul">
                 <li class="nav-li"> 
                     <a href="index.html"> Home </a>
