--- a/projects/catstagram/index.html
+++ b/projects/catstagram/index.html
@@ -59,7 +59,7 @@
             <p class="account-name">Gracie-the-detective</p>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/A-Cat.jpg/1600px-A-Cat.jpg">
             <div id="likeCount1"></div>
-            <button id="likeBtn">Like</button>
+            <button id="likeBtn" onClick="likePhoto()">Like</button>
             <p class="caption">Gracie's on the case! She'll be watching you...</p>
         </div>
         <!--Cat Photo 2-->
