finished bouncing box

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,16 +8,19 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: rgb(186, 27, 72);
 			font-size: 300%;
 			text-align: center;
 			display: block;
 			position: absolute;
 			top: 100px;
-			left: 0px;  /* <--- Change me! */
+			left: 10px;  /* <--- Change me! */
+			border-radius: 50px;
+			
 		}
 		.board{
 			height: 100vh;
+			background-image: linear-gradient(45deg, #6911cb, #2575fc); 
 		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
@@ -39,6 +42,7 @@
 			var box = jQuery('.box');	// reference to the HTML .box element
 			var board = jQuery('.board');	// reference to the HTML .board element
 			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
+			var boardHeight = jQuery(window).height(); // the maximum Y-Coordinate of the screen
 
 			// Every 50 milliseconds, call the update Function (see below)
 			setInterval(update, 50);
@@ -47,30 +51,51 @@
 			box.on('click', handleBoxClick);
 
 			// moves the Box to a new position on the screen along the X-Axis
-			function moveBoxTo(newPositionX) {
+			function moveBoxTo(newPositionX, newPositionY) {
 				box.css("left", newPositionX);
-			}
+				box.css("top", newPositionY);
+			};
 
 			// changes the text displayed on the Box
 			function changeBoxText(newText) {
 				box.text(newText);
-			}
+			};
 
 			//////////////////////////////////////////////////////////////////
 			/////////////////// YOUR CODE BELOW HERE /////////////////////////
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
-
+			var positionX = 0;
+			var points = 0;
+			var speed = 10;
+			var positionY = 0;
+			var speedY = 10;
+			var randNum = Math.random() * boardWidth
+			var randNumY = Math.random() * boardHeight
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
-			function update() {
-				
+			function update () {
+				/* Your Code to Increase positionX by 10 HERE*/
+				if (positionX > boardWidth - 55) {
+					speed *= -1
+				};
+				if (positionX < 0) {
+					speed = Math.abs(speed)
+				};
+				if (positionY > boardHeight - 55) {
+					speedY *= -1
+				};
+				if (positionY < 0 ) {
+					speedY = Math.abs(speedY)
+				};
+				positionX += speed;
+				positionY += speedY;
+				moveBoxTo(positionX, positionY);
 
 			};
 
@@ -80,8 +105,22 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
-
+				positionX = randNum;
+				positionY = randNumY;
+				if (speed < 0) {
+					speed -= 3
+				};
+				if (speed > 0) {
+					speed += 3
+				};
+				if (speedY < 0) {
+					speedY -= 3
+				};
+				if (speedY > 0) {
+					speedY += 3
+				};
+				points += 1;
+				changeBoxText(points);
 
 			};
 		})();
