--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -66,13 +66,12 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			var positionX = 0;
+			var positionX = 0
 			var points = 0;
 			var speed = 10;
 			var positionY = 0;
 			var speedY = 10;
-			var randNum = Math.random() * boardWidth
-			var randNumY = Math.random() * boardHeight
+			
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -81,13 +80,13 @@
 			*/
 			function update () {
 				/* Your Code to Increase positionX by 10 HERE*/
-				if (positionX > boardWidth - 55) {
+				if (positionX > boardWidth) {
 					speed *= -1
 				};
 				if (positionX < 0) {
 					speed = Math.abs(speed)
 				};
-				if (positionY > boardHeight - 55) {
+				if (positionY > boardHeight) {
 					speedY *= -1
 				};
 				if (positionY < 0 ) {
@@ -105,6 +104,8 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
+				var randNum = Math.random() * boardWidth
+				var randNumY = Math.random() * boardHeight
 				positionX = randNum;
 				positionY = randNumY;
 				if (speed < 0) {
