--- a/asd-projects/walker/index.html
+++ b/asd-projects/walker/index.html
@@ -11,8 +11,10 @@
   </head>
   
   <body>
+    <h1> Tag! </h1>
     <div id='board'>
-      <div id='gameItem'></div>
+      <div id='walker'></div>
+      <div id='walker2' class='it'></div>
     </div>
   </body>
 </html>
