--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -15,7 +15,7 @@
 			position: absolute;
 			top: 100px;
 			left: 10px;  /* <--- Change me! */
-			border-radius: 50px;
+			border-radius: 35px;
 			
 		}
 		.board{
@@ -86,7 +86,7 @@
 				if (positionX < 0) {
 					speed = Math.abs(speed)
 				};
-				if (positionY > boardHeight) {
+				if (positionY > (boardHeight)) {
 					speedY *= -1
 				};
 				if (positionY < 0 ) {
