--- a/asd-projects/pong/index.html
+++ b/asd-projects/pong/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <title>Pong 2.0</title>
     <!-- Load CSS files -->
     <link rel="stylesheet" type="text/css" href="index.css">
     
@@ -11,8 +11,14 @@
   </head>
   
   <body>
+    <div id="score-board">
+      <p id="player1" class="player-score"> Player 1: 0</p>
+      <p id="player2" class="player-score"> Player 2: 0</p>
+    </div>
     <div id='board'>
-      <div id='gameItem'></div>
+      <div id='rightPaddle' class="Xpaddle"></div>
+      <div id="leftPaddle" class="Xpaddle"></div>
+      <div id="ball"></div>
     </div>
   </body>
 </html>
