--- a/asd-projects/pong/index.html
+++ b/asd-projects/pong/index.html
@@ -12,12 +12,12 @@
   
   <body>
     <div id="score-board">
-      <p id="player1" class="player-score"> Player 1: 0</p>
-      <p id="player2" class="player-score"> Player 2: 0</p>
+      <p id="player1" class="player-score">Player 1: 0 </p>
+      <p id="player2" class="player-score">Player 2: 0 </p>
     </div>
     <div id='board'>
-      <div id='rightPaddle' class="Xpaddle"></div>
-      <div id="leftPaddle" class="Xpaddle"></div>
+      <div id='rightPaddle' class="paddle"></div>
+      <div id="leftPaddle" class="paddle"></div>
       <div id="ball"></div>
     </div>
   </body>
