--- a/iot-projects/interface-inyourface/device-parser.html
+++ b/iot-projects/interface-inyourface/device-parser.html
@@ -90,11 +90,12 @@
 
                 success: function (data) {
                     // TODO 8: Create a success function that iterates over the list of sensors and displays them
-                    var senorsList = ""
+                    var sensorsList = ""
                     $("#sensors").html(Object.keys(data).length + " sensors found!")
                     for (var key in data) {
-                        sensorsList += '<li><a href="' + sensorsPath + key + '">' + data["temp"].name + "</a></li>";
+                        sensorsList += '<li><a href="' + sensorsPath + key + '">' + data[key].name + "</a></li>";
                     }
+                    $("#sensors-list").html(sensorsList);
                 },
 
                 error: function (jqXHR, textStatus, errorThrown) {
